# ProjectK-Luminous-Techno-X-2024

./: README.md
Client/: package-lock.json  package.json
Client/src/: App.jsx  index.css
Client/src/components/: Card.jsx
Client/src/pages/: InputPage.jsx  ResultPage.jsx
Data/: solar_energy_data_2024.csv  tariff_data_2024.csv
Server/: .gitignore  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  vercel.json
Server/data/: energy_consumption_data_2024.csv
Server/server/: app.py  main.py
