[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["kota-karthik <kotakarthik2307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
joblib = "^1.4.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
